# sluice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bridge_zero_root.sol  dos_loop.sol  fee_on_transfer.sol  flashloan_governance.sol  forced_ether.sol  integer_truncation.sol  librust_out.rlib  selector_collision.sol  slippage.sol  unchecked_transfer.sol  weak_randomness.sol
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  SCOREBOARD.md
benchmarks/contests/: 2022-12-tigris.json  2023-01-reserve.json  2023-03-asymmetry.json  2023-04-caviar.json  2023-04-frankencoin.json  2023-06-stader.json  2023-07-basin.json  2023-10-wildcat.json  2023-12-ethereumcreditguild.json  2024-01-salty.json  2024-05-loop.json
benchmarks/src/: main.rs  manifest.rs  score.rs
configs/: amm.toml  bridge.toml  lending.toml  vault.toml
crates/sluice-cli/: Cargo.toml
crates/sluice-cli/examples/: profile_phases.rs
crates/sluice-cli/src/: main.rs
crates/sluice-config/: Cargo.toml
crates/sluice-config/src/: feedback.rs  lib.rs
crates/sluice-dataflow/: Cargo.toml
crates/sluice-dataflow/src/: lib.rs
crates/sluice-engine/: Cargo.toml
crates/sluice-engine/src/: context.rs  detector.rs  lib.rs  score.rs
crates/sluice-engine/src/detectors/: access_control.rs  accounting.rs  apk_membership_desync.rs  approve_race.rs  arbitrary_transfer.rs  array_length_mismatch.rs  backing_spot_inflation.rs  bad_debt_socialization.rs  batch_verify_skip.rs  block_number_time.rs  bridge.rs  cached_domain_separator.rs  centralization.rs  checkpoint_hint_trust.rs  churn_stale_stake_double_count.rs  clamp_residual_burn.rs  clock_extension_depth_branch.rs  conditional_sender_aliasing.rs  conservation.rs  cooldown_bypass_flag.rs  crosschain_rate_staleness.rs  curve_logit_domain_edge.rs  decimals_assumption.rs  delegatecall_loop.rs  delegated_signer_single_step.rs  deprecated_eth_send.rs  dos.rs  double_entry_token.rs  dvn_quorum_conflation.rs  eip712_typehash_mismatch.rs  ejection_ratelimit_live_base.rs  encodepacked_collision.rs  epoch_boundary_staleness.rs  erc1155_receiver.rs  erc721_mint_reentrancy.rs  erc721_safety.rs  erc777.rs  escrow_exit_restriction_gap.rs  external_root_caller_timestamp.rs  fee_on_transfer.rs  (+97 more)
crates/sluice-engine/tests/: corpus.rs  real_hacks.rs  real_hacks_r1.rs  real_hacks_r2.rs  real_hacks_r3.rs  real_hacks_r4.rs
crates/sluice-engine/tests/fixtures/novel/: internal_share_pricing_rounding.sol  pooled_shares_reprice_desync.sol  proportional_split_residual.sol
crates/sluice-findings/: Cargo.toml
crates/sluice-findings/src/: builder.rs  finding.rs  lib.rs  render.rs
crates/sluice-frontier/: Cargo.toml
crates/sluice-frontier/src/: lib.rs  xcontract.rs
crates/sluice-invariant/: Cargo.toml
crates/sluice-invariant/src/: lib.rs
crates/sluice-ir/: Cargo.toml
crates/sluice-ir/src/: contract.rs  expr.rs  func.rs  ids.rs  lib.rs  module.rs  stmt.rs
crates/sluice-parse/: Cargo.toml
crates/sluice-parse/src/: effects.rs  lib.rs  lower.rs
crates/sluice-verify/: Cargo.toml
crates/sluice-verify/src/: context.rs  lib.rs  project.rs
crates/sluice-verify/src/templates/: access_control.rs  bridge.rs  erc4626.rs  mod.rs  oracle.rs  reentrancy.rs  stub.rs
crates/sluice-verify/tests/: templates.rs
docs/: ARCHITECTURE.md  DETECTOR_AUTHORING.md  DETECTOR_CATALOG.md  IMPROVEMENT_LOG.md  INVARIANT_ENGINE_DESIGN.md  NORTH_STAR.md  PRECISION_BACKLOG.md  R22_POC_DESIGN.md  R23_BUILD_SPECS.md  R23_V4_BACKLOG.md  R26_AA_BACKLOG.md  R27_PERPS_BACKLOG.md  R29_AMM_BACKLOG.md
docs/dogfood-findings/: ethereumcreditguild-2026-06-05.md  etherfi-2026-06-04.md  salty-2026-06-05.md
tests/fixtures/: VulnBank.sol
tests/fixtures/novel/: checkpoint_hint_trust.sol  epoch_boundary_staleness.sol  internal_share_pricing_rounding.sol  pooled_shares_reprice_desync.sol  proportional_split_residual.sol  silenced_privileged_callback.sol
tests/fixtures/real_hacks/: beanstalk.sol  bzx.sol  conic.sol  cover.sol  cream.sol  curve_vyper.sol  deus.sol  erc4626_inflation.sol  euler.sol  fei_rari.sol  furucombo.sol  gamma.sol  grim.sol  harvest.sol  hundred.sol  inverse.sol  jimbo.sol  kyber_elastic.sol  lendf_erc777.sol  lifi.sol  mango.sol  midas.sol  nomad.sol  orion.sol  pancakebunny.sol  parity.sol  pickle.sol  platypus.sol  polynetwork.sol  qubit.sol  radiant.sol  rari_fuse_cross.sol  revest.sol  saddle.sol  sonne.sol  spartan.sol  sturdy.sol  templedao.sol  visor.sol  warp.sol  (+2 more)
tests/fixtures/safe/: safe_access.sol  safe_erc20.sol  safe_oracle.sol  safe_proxy.sol  safe_reentrancy.sol  safe_signature.sol  safe_vault.sol  safe_voting.sol
tests/fixtures/vuln/: access_control.sol  bridge_zero_root.sol  delegatecall.sol  dos_loop.sol  fee_on_transfer.sol  flashloan_governance.sol  forced_ether.sol  integer_truncation.sol  missing_solvency.sol  oracle_manipulation.sol  read_only_reentrancy.sol  reentrancy.sol  selector_collision.sol  signature_replay.sol  slippage.sol  tx_origin.sol  unchecked_transfer.sol  uninitialized_proxy.sol  vault_inflation.sol  weak_randomness.sol
