[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/0xCyberstan/sluice"
authors = ["Sluice contributors"]
rust-version = "1.85"

[workspace.dependencies]
sluice-ir        = { path = "crates/sluice-ir" }
sluice-parse     = { path = "crates/sluice-parse" }
sluice-dataflow  = { path = "crates/sluice-dataflow" }
sluice-invariant = { path = "crates/sluice-invariant" }
sluice-frontier  = { path = "crates/sluice-frontier" }
sluice-engine    = { path = "crates/sluice-engine" }
sluice-verify    = { path = "crates/sluice-verify" }
sluice-findings  = { path = "crates/sluice-findings" }
sluice-config    = { path = "crates/sluice-config" }

solang-parser = "0.3.5"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
rustc-hash  = "2"
smallvec    = { version = "1", features = ["serde", "union"] }
petgraph    = "0.6"
rayon       = "1"
anyhow      = "1"
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
colored     = "2"
once_cell   = "1"
regex       = "1"

[profile.release]
opt-level = 3
lto = "thin"
