[package]
name = "sluice-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sluice_config"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
once_cell = { workspace = true }
