[package]
name = "sluice-dataflow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sluice_dataflow"
path = "src/lib.rs"

[dependencies]
sluice-ir = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
sluice-parse = { workspace = true }
