[package]
name = "sluice-findings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sluice_findings"
path = "src/lib.rs"

[dependencies]
sluice-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustc-hash = { workspace = true }
