[package]
name = "sluice-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sluice_verify"
path = "src/lib.rs"

[dependencies]
sluice-ir = { workspace = true }
sluice-findings = { workspace = true }
rustc-hash = { workspace = true }
